# wien2k_gen

./: .gitignore  CITATION.cff  Dockerfile  LICENSE.md  Makefile  README.md  Singularity.def  download_and_train.py  environment.yml  install.sh  parallel_options  pyproject.toml
.github/workflows/: ci.yml  reframe_benchmark.yml
completions/: forge.bash  forge.zsh  forge_sbatch.bash  forge_sbatch.zsh  forge_wizard.bash  forge_wizard.zsh  wien2k_gen.bash  wien2k_gen.zsh  wien2k_sbatch.bash  wien2k_sbatch.zsh  wien2k_wizard.bash  wien2k_wizard.zsh
docs/: api-reference.md  api.rst  conf.py  contributing.md  examples.md  index.md  index.rst  installation.md  ml_dataset.md  parallel-modes.md  troubleshooting.md  user-guide.md
examples/: README.md
examples/01_si_semiconductor/: Si.in1  Si.in2  Si.struct  wien2k_gen.yaml
examples/02_cu_metal/: Cu.in1  Cu.in2  Cu.struct  wien2k_gen.yaml
examples/03_fe_magnetic/: Fe.in1  Fe.in2  Fe.inst  Fe.struct  wien2k_gen.yaml
offline_packages/: requirements-offline.txt
offline_packages/packaging_offline/: textual-0.85.2-py3-none-any.whl
src/forge/: __init__.py  __main__.py  backend_manager.py  cli.py  cli_sbatch.py  config.py  exceptions.py  logging_config.py  types.py  wizard.py  wizard_sbatch.py
src/forge/api/: __init__.py  dashboard.html  server.py
src/forge/backends/: __init__.py  base.py  cp2k.py  elpa_selector.py  gpu_backend.py  vasp.py  wien2k.py
src/forge/backends/quantum_espresso/: __init__.py  backend.py  config_generator.py  executor.py  parser.py
src/forge/backends/wien2k/: __init__.py  core.py  parsers.py
src/forge/benchmark/: __init__.py  real.py  report.py  synthetic.py
src/forge/cli_commands/: __init__.py  _utils.py  advise.py  analyze.py  analyze_bands.py  base.py  benchmark.py  converge.py  diagnose.py  diagnostics.py  generate.py  hardware.py  history.py  monitor.py  optimize.py  predict.py  run.py  screen.py  submit.py  tui.py  workflow.py
src/forge/core/: __init__.py  builder.py  case_parser.py  constants.py  electronic_structure.py  energy.py  hardware.py  locator.py  materials_project.py  perf_counters.py  pipeline.py  scheduler.py  terminal_monitor.py  topology.py  workflow.py  workflow_executor.py
src/forge/core/hardware/: __init__.py  cpu.py  detection.py  system.py  types.py  wrapper.py
src/forge/ml/: __init__.py  data_pipeline.py  gnn_kpoint_predictor.py  gnn_kpoint_v1.npz
src/forge/optimizer/: __init__.py  advisor.py  bayesian_tuner.py  convergence.py  gpu_detector.py  history.py  ml_predict.py  monitor.py  parallel.py  profiler.py
src/forge/optimizer/bayesian/: __init__.py  acquisition.py  bohb.py  constraints.py  core.py  dpp.py  elements.py  gp.py  kernels.py  sampling.py
src/forge/optimizer/monitor/: __init__.py  checkpoint.py  convergence.py  engine.py  types.py
src/forge/submit/: __init__.py  lsf.py  pbs.py  slurm.py
src/forge/ui/: __init__.py  analysis.py  rich_ui.py
src/forge/utils/: __init__.py  diagnostic.py  export.py  filelock.py  parallel_options.py  scratch.py  subprocess_utils.py  validation.py
src/wien2k_gen/: __init__.py  __main__.py  backend_manager.py  cli.py  cli_sbatch.py  config.py  exceptions.py  logging_config.py  types.py  wizard.py  wizard_sbatch.py
src/wien2k_gen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/wien2k_gen/api/: __init__.py  server.py
src/wien2k_gen/backends/: __init__.py  base.py  cp2k.py  elpa_selector.py  gpu_backend.py  vasp.py  wien2k.py
src/wien2k_gen/backends/quantum_espresso/: __init__.py  backend.py  config_generator.py  executor.py  parser.py
src/wien2k_gen/benchmark/: __init__.py  real.py  report.py  synthetic.py
src/wien2k_gen/core/: __init__.py  builder.py  case_parser.py  constants.py  electronic_structure.py  energy.py  hardware.py  materials_project.py  perf_counters.py  pipeline.py  scheduler.py  terminal_monitor.py  topology.py  workflow.py  workflow_executor.py
src/wien2k_gen/ml/: __init__.py  gnn_kpoint_predictor.py
src/wien2k_gen/optimizer/: __init__.py  advisor.py  bayesian.py  bayesian_tuner.py  convergence.py  gpu_detector.py  history.py  ml_predict.py  monitor.py  parallel.py  profiler.py
src/wien2k_gen/submit/: __init__.py  lsf.py  pbs.py  slurm.py
src/wien2k_gen/ui/: __init__.py  analysis.py  interactive.py  interactive.tcss  rich_ui.py  widgets.py  workers.py
src/wien2k_gen/ui/dialogs/: __init__.py  help_dialog.py  profile_dialog.py  report_dialog.py
src/wien2k_gen/ui/tabs/: __init__.py  advanced_tab.py  resources_tab.py  settings_tab.py  submit_tab.py
src/wien2k_gen/utils/: __init__.py  atomic_write.py  diagnostic.py  export.py  filelock.py  parallel_options.py  scratch.py  subprocess_utils.py  validation.py
tests/: __init__.py  conftest.py  integration_test.py  test_advisor.py  test_analysis.py  test_auto_detect.py  test_bayesian.py  test_bohb_dpp.py  test_case_parser.py  test_config.py  test_convergence_opt.py  test_gnn_kpoint_predictor.py  test_hardware.py  test_integration.py  test_new_features.py  test_parallel.py  test_parallel_options.py  test_robustness.py  test_scheduler.py  test_topology.py  test_types.py  test_utils.py  test_wien2k_backend.py  test_wien2k_flags.py  test_wizard.py
tests/fixtures/: case_minimal.struct  hardware_avx512_ib.json  scf_converged.scf  topology_slurm.json
tests/reframe/: reframe_config.py  wien2k_gen_test.py
